# varick-ap-agent

./: .gitignore  CLAUDE.md  README.md  SPEC.md  architecture-decisions.md  cli.py  pyproject.toml  spec-change-agent-refactor.md
data/: corrections.json  invoices_labeled.json  invoices_unlabeled.json  purchase_orders.json
docs/: approval.md  classification.md  cli.md  data-models.md  eval-and-feedback.md  journal-entries.md  llm-extraction.md  pipeline.md  po-matching.md  storage.md  treatment.md
eval/: feedback.py  labels.py  runner.py
process/: README.md  llm-development-process.md
src/: agent.py  approval.py  attribute_extraction.py  classification.py  db.py  journal.py  models.py  pipeline.py  po_matching.py  prompts.py  tools.py  treatment.py
tests/: test_rules.py
